--- a/index.html
+++ b/index.html
@@ -12,140 +12,88 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
-    <title>Abdusamad Malikov </title>
-    <meta content="Abdusamad Malikov" name="author">
-    <meta content="Abdusamad here, 20 y.o, experienced programmer(not a printer fixer) with several successful projects under my belt. . I'd say my portfolio introduces me better than my words do" name="description">
-    
-    <meta content="Abdusamad Malikov | Entrepreneur" property="og:title">
-    <meta content="Abdusamad here, 20 y.o, experienced programmer(not a printer fixer) with several successful projects under my belt. . I'd say my portfolio introduces me better than my words do" property="og:description">
-    <meta content="https://abdusamad.uz/" property="og:url">
-    <meta content="img/jpg/home.jpg" property="og:image">
-    <meta content="Blog, Vlog, Programmer, Biography, Coding, Code, Backend, Python" name="keywords" >
-    <meta content="website" property="og:type">
+    <title>Globbid Cunsulting</title>
   </head>
   <body>
     <header class="header">
-      <div class="header__background" aria-label="background image"></div>
-      <div class="header__main-box">
-        <div class="header__content">
-          <p>Hey, I'm</p>
-          <div
-            class="header__content-highlight header__content-highlight--first"
-          >
-            Abdusamad <img src="img/png/boy.png" alt="boy emoji" />
+      <div class="container">
+        <div class="header-content">
+          <div class="color-black">
+            <span class="logo">GLOBBID CONSULTING</span>
           </div>
-        </div>
-        <div class="header__content">
-          <p>I'm a</p>
-          <div
-            class="header__content-highlight header__content-highlight--second"
-          >
-            Backend developer
-          </div>
-        </div>
-        <div class="header__content">
-          <p>currently at</p>
-          <a href="#" target="_blank"
-            class="header__content-highlight header__content-highlight--third"
-          >
-            Universoft
-            <img src="img/svg/top-right-arrow.svg" alt="arrow to top right" />
-          </a>
+          <nav>
+            <ul class="navbar">
+              <li><a href="#">Home</a></li>
+              <li><a href="./solutions.html">Resheniya</a></li>
+              <li><a href="./expertiza.html">Expertiza</a></li>
+              <li><a href="./contact.html">Kontakt</a></li>
+              <li class="dropdown">
+                <a href="#" class="lang-toggle">Lang</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#" data-lang="en">English</a></li>
+                  <li><a href="#" data-lang="ru">Русский</a></li>
+                  <li><a href="#" data-lang="uz">O'zbek</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Search</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
-
-      <nav class="navbar">
-        <ul class="navigation">
-          <li>
-            <a
-              href="index.html"
-              class="navigation__item navigation__item--active navigation__item--first"
-            >
-              <img src="img/svg/home.svg" alt="home icon" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="about.html"
-              class="navigation__item navigation__item--second"
-            >
-              <img src="img/svg/user.svg" alt="user icon" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="projects.html"
-              class="navigation__item navigation__item--third"
-            >
-              <img src="img/svg/pencil.svg" alt="pencil icon" />
-            </a>
-          </li>
-
-          <li>
-            <a
-              href="articles.html"
-              class="navigation__item navigation__item--fourth"
-            >
-              <img src="img/svg/article.svg" alt="article icon" />
-            </a>
-          </li>
-
-          <li>
-            <a
-              href="books.html"
-              class="navigation__item navigation__item--fifth"
-            >
-              <img src="img/svg/books.svg" alt="books icon" />
-            </a>
-          </li>
-
-          <li>
-            <a
-              href="readings.html"
-              class="navigation__item navigation__item--sixth"
-            >
-              <img src="img/svg/reading.svg" alt="reading icon" />
-            </a>
-          </li>
-
-          <li>
-            <a
-              href="setup.html"
-              class="navigation__item navigation__item--seventh"
-            >
-              <img src="img/svg/setup.svg" alt="computer icon" />
-            </a>
-          </li>
-          <li class="navigation__item-breaker">&nbsp;</li>
-          <li>
-            <a
-              href="https://github.com/sevbo2003"
-              target="_blank"
-              class="navigation__item navigation__item--eighth"
-            >
-              <img src="img/svg/github.svg" alt="github icon" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://t.me/yomon_jiyan"
-              target="_blank"
-              class="navigation__item navigation__item--nineth"
-            >
-              <img src="img/svg/telegram.svg" alt="telegram icon" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://linkedin.com/in/abdusamad-malikov"
-              target="_blank"
-              class="navigation__item navigation__item--tenth"
-            >
-              <img src="img/svg/linkedin.svg" alt="linkedin icon" />
-            </a>
-          </li>
-        </ul>
-      </nav>
     </header>
+
+    <section class="hero-section">
+      <div class="hero-img-container">
+        <img src="./img/png/hero.png" alt="Hero Background" class="hero-img" />
+      </div>
+      <div class="hero-text">Делая сложное простым, мы создаем ваш успех</div>
+    </section>
+
+  
+
+    <section class="cta">
+      <div class="cta_1">
+        <p>Our best and latest thinking sent to your inbox</p>
+        <button>Sign up</button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container_footer">
+        <ul class="ul1">
+          <li><a href="#">Insights</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Alumni</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="ul2">
+          <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
+          <li><img src="./img/png/X-3x.png" alt="X" /></li>
+          <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
+          <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
+          <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Site map</a></li>
+          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#">Legal disclaimer</a></li>
+          <li><a href="#">Client confidentiality</a></li>
+          <li><a href="#">Cookie notice</a></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Responsible AI use</a></li>
+          <li><a href="#">Do not sell or share my personal information</a></li>
+        </ul>
+        <div>
+          <span class="logo" style="color: #cccccc; font-size: 20px"
+            >GLOBBID CUNSULTING</span
+          >
+        </div>
+      </div>
+    </footer>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
