--- a/index.html
+++ b/index.html
@@ -48,7 +48,87 @@
       </div>
       <div class="hero-text">Делая сложное простым, мы создаем ваш успех</div>
     </section>
+    
+    <section class="flex">
+        <div class="about">
+            <div class="list">
+                <p>Трудности заказчиков (госорганизаций и крупных компаний)</p>
+            <p>2 Недостаточная стабильность базы поставщиков</p>
+            <ul>
+                <li> Отсутствие инструментов для регулирования круга поставщиков и проблемы с подготовкой закупочной документации.</li>
+                <li>Затраты ресурсов на согласование и привлечение новых участников.</li>
+                <li>Отсутствие инструментов и кадров для внедрения категорийного менеджмента и современных методов управления</li>
+                <li> Сложность анализа предложений из-за слабой автоматизации.</li>
+                <li> Низкий уровень инструментария для планирования и аналитики сказывается на  сотрудниках.</li>
+                <li> Ручные процессы замедляют принятие решений.</li>
+            </ul>
+            </div>
+           <div class="list">
+               <p>Трудности поставщиков (участников госзакупок)</p>
+               <p>1.Высокий барьер для участия</p>
+            <ul>
+                <li> Сложные требования к документам, которые трудно выполнить без опыта участия.</li>
+                <li> Незнание скрытых требований и критериев приводит к отклонению заявок.</li>
+            </ul>
+            <p> 2. Неэффективное планирование</p>
+            <ul>
+                <li>Отсутствие стратегии участия в тендерах.</li>
+                <li> Недостаточная подготовка и анализ по конкурентам при формировании предложений.</li>
+            </ul>
+            <p> 3. Риски и потери</p>
+            <ul>
+                <li>Участие в тендерах без анализа рисков может привести к убыткам.</li>
+                <li> Неправильное ценообразование уменьшает маржу.</li>
+            </ul>
+            <p> 4. Отсутствие долгосрочного планирования</p>
+            <ul>
+                <li>Упор на разовые сделки вместо выстраивания устойчивого бизнеса с госзаказчиками.</li>
+            </ul>
+           </div>
+        </div>
+        <div class="section_container">
+            <img src="./img/png/hero.png" alt="" class="section_img">
+        </div>
+    </section>
+    <section class="flex">
+        <div class="section_container" style="width: 50%;">
+            <img src="./img/png/image.png" alt="" class="section_img">
+        </div>
+        <div class="about" style="margin: 20px auto; width: 40%;">
+            <div class="list">
+                <p>Globbid Consulting — это ваш внешний штат высококвалифицированных специалистов, готовый решить все перечисленные трудности как для заказчиков, так и для поставщиков.</p>
+                <p> Мы помогаем заказчикам:</p>
+            <ul>
+                <li>Внедрить прозрачные и эффективные закупочные процессы.</li>
+                <li>Разработать стратегии категорийного менеджмента.</li>
+                <li>Оптимизировать расходы и соответствовать законодательным требованиям</li>
+                <li>Автоматизировать управление закупками для снижения человеческого фактора.</li>
+            </ul>
+            </div>
+           <div class="list">
+               <p>Мы помогаем поставщикам:</p>
+            <ul>
+                <li> Подготовиться к тендерам, минимизировать ошибки и увеличить шансы на победу.</li>
+                <li> Разработать стратегии долгосрочного сотрудничества с государственными заказчиками.</li>
+                <li>Предоставить юридическую, аналитическую и маркетинговую поддержку.</li>
+                <li> Снизить риски и добиться роста через эффективное участие в госзакупках.</li>
+            </ul>
+           </div>
+        </div>
+    </section>
 
+    <section>
+        <div class="learn">
+            <div class="img">
+                <img src="./img/blackw.jpg" alt="">
+            </div>
+            <div class="more">
+                <p>Претворите свою цель в жизнь</p>
+                <h2>Будьте оригинальным Керни</h2>
+                <button>узнать больше</button>
+            </div>
+        </div>
+    </section>
   
 
     <section class="cta">
