--- a/solutions.html
+++ b/solutions.html
@@ -16,77 +16,136 @@
   </head>
   <body>
     <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="color-black">
-                    <span class="logo">GLOBBID CONSULTING</span>
-                </div>
-                <nav>
-                    <ul class="navbar">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="#">Resheniya</a></li>
-                        <li><a href="./expertiza.html">Expertiza</a></li>
-                        <li><a href="./contact.html">Kontakt</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="lang-toggle">Lang</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" data-lang="en">English</a></li>
-                                <li><a href="#" data-lang="ru">Русский</a></li>
-                                <li><a href="#" data-lang="uz">O'zbek</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Search</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <div style="margin-top: 80px;">
-     <h1> Solution</h1>
-    </div>
-  
-      <section class="cta">
-        <div class="cta_1">
-          <p>Our best and latest thinking sent to your inbox</p>
-          <button>Sign up</button>
-        </div>
-      </section>
-  
-      <footer>
-        <div class="container_footer">
-          <ul class="ul1">
-            <li><a href="#">Insights</a></li>
-            <li><a href="#">Media</a></li>
-            <li><a href="#">Alumni</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Locations</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-          <ul class="ul2">
-            <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
-            <li><img src="./img/png/X-3x.png" alt="X" /></li>
-            <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
-            <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
-            <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
-          </ul>
-          <ul class="ul3">
-            <li><a href="#">Site map</a></li>
-            <li><a href="#">Privacy policy</a></li>
-            <li><a href="#">Legal disclaimer</a></li>
-            <li><a href="#">Client confidentiality</a></li>
-            <li><a href="#">Cookie notice</a></li>
-          </ul>
-          <ul class="ul3">
-            <li><a href="#">Responsible AI use</a></li>
-            <li><a href="#">Do not sell or share my personal information</a></li>
-          </ul>
-          <div>
-            <span class="logo" style="color: #cccccc; font-size: 20px"
-              >GLOBBID CUNSULTING</span
-            >
+      <div class="container">
+        <div class="header-content">
+          <div class="color-black">
+            <span class="logo">GLOBBID CONSULTING</span>
           </div>
+          <nav>
+            <ul class="navbar">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="#">Resheniya</a></li>
+              <li><a href="./expertiza.html">Expertiza</a></li>
+              <li><a href="./contact.html">Kontakt</a></li>
+              <li class="dropdown">
+                <a href="#" class="lang-toggle">Lang</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#" data-lang="en">English</a></li>
+                  <li><a href="#" data-lang="ru">Русский</a></li>
+                  <li><a href="#" data-lang="uz">O'zbek</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Search</a></li>
+            </ul>
+          </nav>
         </div>
-      </footer>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <p class="solution_hero_text_first">
+          Мы понимаем, что успешное участие в закупках требует разных подходов
+          для заказчиков и поставщиков. Поэтому мы разработали решения, которые
+          помогут вам достичь своих целей, будь то оптимизация закупок или
+          уверенная победа в тендерах. С Globbid Consulting вы получите
+          конкурентное преимущество, будь вы заказчиком или поставщиком!
+        </p>
+        <p class="solution_hero_text_second">
+          Для поставщиков мы разработали 4 пакета услуг, чтобы удовлетворить
+          разные потребности бизнеса, от первых шагов в тендерах до построения
+          стратегического партнерства с государственными заказчиками.
+        </p>
+      </div>
+      <div class="solution_hero_img">
+        <div class="img">
+          <img src="" alt="" />
+          <p class="risunok">РИСУНОК_7*</p>
+        </div>
+        <div class="solution_text">
+          <p>1. Консультация</p>
+          <p>
+            Если вы только начинаете или сталкиваетесь с вопросами участия в
+            тендерах, мы готовы:
+          </p>
+          <ul>
+            <li>Оценить вашу готовность к участию.</li>
+            <li>Провести анализ конкурентов и рынка.</li>
+            <li>Подсказать, как подготовить тендерное предложение.</li>
+          </ul>
+          <p>Почему это важно?</p>
+          <p>
+            Консультация поможет вам понять рынок и избежать ошибок, которые
+            могут стоить вам контракта.
+          </p>
+        </div>
+      </div>
+      <div class="solution_hero_img">
+        <div class="solution_text" style="margin-left: 2rem;">
+          <p>2. SOS (Экстренная помощь)</p>
+          <p>
+            Если вы уже участвуете в тендере, но столкнулись с проблемами, мы
+            предлагаем:
+          </p>
+          <ul>
+            <li>Экспресс-оценку ситуации.</li>
+            <li>Быструю подготовку корректирующих действий</li>
+            <li>Помощь в подаче документов.</li>
+          </ul>
+          <p>Пример</p>
+          <p>
+            Вы обнаружили ошибку в документах на тендере. Мы исправим её, пока
+            не закончился срок подачи.
+          </p>
+        </div>
+        <div class="img">
+          <img src="" alt="" />
+         <p class="risunok">РИСУНОК_7*</p> 
+        </div>
+      </div>
+    </section>
+
+    <section class="cta">
+      <div class="cta_1">
+        <p>Our best and latest thinking sent to your inbox</p>
+        <button>Sign up</button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container_footer">
+        <ul class="ul1">
+          <li><a href="#">Insights</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Alumni</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="ul2">
+          <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
+          <li><img src="./img/png/X-3x.png" alt="X" /></li>
+          <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
+          <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
+          <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Site map</a></li>
+          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#">Legal disclaimer</a></li>
+          <li><a href="#">Client confidentiality</a></li>
+          <li><a href="#">Cookie notice</a></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Responsible AI use</a></li>
+          <li><a href="#">Do not sell or share my personal information</a></li>
+        </ul>
+        <div>
+          <span class="logo" style="color: #cccccc; font-size: 20px"
+            >GLOBBID CUNSULTING</span
+          >
+        </div>
+      </div>
+    </footer>
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
