--- a/contact.html
+++ b/contact.html
@@ -16,79 +16,112 @@
   </head>
   <body>
     <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="color-black">
-                    <span class="logo">GLOBBID CONSULTING</span>
-                </div>
-                <nav>
-                    <ul class="navbar">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./solutions.html">Resheniya</a></li>
-                        <li><a href="./expertiza.html">Expertiza</a></li>
-                        <li><a href="#">Kontakt</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="lang-toggle">Lang</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" data-lang="en">English</a></li>
-                                <li><a href="#" data-lang="ru">Русский</a></li>
-                                <li><a href="#" data-lang="uz">O'zbek</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Search</a></li>
-                    </ul>
-                </nav>
-            </div>
+      <div class="container">
+        <div class="header-content">
+          <div class="color-black">
+            <span class="logo">GLOBBID CONSULTING</span>
+          </div>
+          <nav>
+            <ul class="navbar">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./solutions.html">Resheniya</a></li>
+              <li><a href="./expertiza.html">Expertiza</a></li>
+              <li><a href="#">Kontakt</a></li>
+              <li class="dropdown">
+                <a href="#" class="lang-toggle">Lang</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#" data-lang="en">English</a></li>
+                  <li><a href="#" data-lang="ru">Русский</a></li>
+                  <li><a href="#" data-lang="uz">O'zbek</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Search</a></li>
+            </ul>
+          </nav>
         </div>
+      </div>
     </header>
 
-   <div style="margin-top: 80px;">
-     <h1> Kontact</h1>
-   </div>
-
-  <section class="cta">
-    <div class="cta_1">
-      <p>Our best and latest thinking sent to your inbox</p>
-      <button>Sign up</button>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container_footer">
-      <ul class="ul1">
-        <li><a href="#">Insights</a></li>
-        <li><a href="#">Media</a></li>
-        <li><a href="#">Alumni</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Locations</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="ul2">
-        <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
-        <li><img src="./img/png/X-3x.png" alt="X" /></li>
-        <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
-        <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
-        <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
-      </ul>
-      <ul class="ul3">
-        <li><a href="#">Site map</a></li>
-        <li><a href="#">Privacy policy</a></li>
-        <li><a href="#">Legal disclaimer</a></li>
-        <li><a href="#">Client confidentiality</a></li>
-        <li><a href="#">Cookie notice</a></li>
-      </ul>
-      <ul class="ul3">
-        <li><a href="#">Responsible AI use</a></li>
-        <li><a href="#">Do not sell or share my personal information</a></li>
-      </ul>
-      <div>
-        <span class="logo" style="color: #cccccc; font-size: 20px"
-          >GLOBBID CUNSULTING</span
-        >
+    <section class="contact_hero">
+      <div class="img">
+        <img src="./img/png/contact_hero.png" alt="" />
       </div>
-    </div>
-  </footer>
+      <div class="contact_hero_text">
+        <div class="contact_number">
+          <div>
+            <p class="contact_title">АДРЕС</p>
+            <p>Узбекистан, Ташкент проспект Мустақиллик</p>
+          </div>
+          <div>
+            <p class="contact_title">РАБОЧЕЕ ВРЕМЯ</p>
+            <p>ПН – ПТ с 9:00 – 18:00</p>
+          </div>
+        </div>
+        <div class="contact_number">
+          <div>
+            <p class="contact_title">ТЕЛЕФОНЫ</p>
+            <p>
+              + 998 99 873 13 33 <br />
+              + 998 33 333 00 33
+            </p>
+          </div>
+          <div>
+            <p class="contact_title">E-MAIL</p>
+            <p>info@globbid.com</p>
+          </div>
+        </div>
+        <div class="contact_number">
+          <div>
+            <p class="contact_title">TELEGRAM</p>
+            <p>@Globbid</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta">
+      <div class="cta_1">
+        <p>Our best and latest thinking sent to your inbox</p>
+        <button>Sign up</button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container_footer">
+        <ul class="ul1">
+          <li><a href="#">Insights</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Alumni</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="ul2">
+          <li><img src="./img/png/LinkedIn-3x.png" alt="Linkidin" /></li>
+          <li><img src="./img/png/X-3x.png" alt="X" /></li>
+          <li><img src="./img/png/Facebook-3x.png" alt="Facebook" /></li>
+          <li><img src="./img/png/Instagram-3x.png" alt="Instagram" /></li>
+          <li><img src="./img/png/YouTube-3x.png" alt="YouTube" /></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Site map</a></li>
+          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#">Legal disclaimer</a></li>
+          <li><a href="#">Client confidentiality</a></li>
+          <li><a href="#">Cookie notice</a></li>
+        </ul>
+        <ul class="ul3">
+          <li><a href="#">Responsible AI use</a></li>
+          <li><a href="#">Do not sell or share my personal information</a></li>
+        </ul>
+        <div>
+          <span class="logo" style="color: #cccccc; font-size: 20px"
+            >GLOBBID CUNSULTING</span
+          >
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
