--- a/expertiza.html
+++ b/expertiza.html
@@ -42,9 +42,70 @@
         </div>
     </header>
 
-   <div style="margin-top: 80px;">
-     <h1> Expertiza</h1>
-   </div>
+    <section>
+      <div class="expertiza_hero_img">
+        <div class="expertiza_text">
+          <p>Globbid Consulting объединяет экспертов с многолетним опытом работы в самых сложных и требовательных бизнес-средах. Мы понимаем реальный сектор экономики, знаем, как строить устойчивые стратегии, и берем ответственность за результат.</p>
+          <p style="margin: 1rem auto;">
+            Наш опыт</p>
+          <p>
+            Руководство крупными бизнесами
+          </p>
+          <ul>
+            <li> Более 20 лет работы в руководящих позициях международных компаний, включая такие отрасли, как:</li>
+            <li>Машиностроение</li>
+            <li>Горнодобывающая промышленность</li>
+            <li>Ретейл и социальные проекты</li>
+            <li>Финансы и дистрибуция</li>
+            <li>Внедрению ERP-систем по коммерческим блокам и управлению корпоративными данными.</li>
+            <li> Оптимизации закупок и сокращению затрат.</li>
+            <li> Развитию продаж, включая сложные сделки в B2B и B2G.</li>
+          </ul>
+          <p>Экспертиза в B2G-секторе</p>
+          <ul>
+            <li>
+              Мы принимали участие в масштабных проектах госзакупок и взаимодействовали с государственными структурами, помогая бизнесу соответствовать требованиям законодательства.
+            </li>
+            <li> Помогли десяткам компаний выйти на рынок госзакупок и занять там лидирующие позиции.</li>
+          </ul>
+        </div>
+        <div class="img">
+          <img src="./img/png/expertixa_hero.png" alt="" />
+        </div>
+      </div>
+      <div class="expertiza_hero_img">
+        <div class="img">
+          <img src="./img/png/expertiza_hero2.png" alt="" />
+        </div>
+        <div class="expertiza_text" style="margin-left: 2rem;">
+          <p>Ключевые компетенции команды</p>
+          <p>1. Стратегическое управление: <br> - Мы разрабатываем стратегии, которые работают в долгосрочной перспективе, используя анализ рынка и отраслевых трендов.</p>
+          <p>2. Управление изменениями и автоматизация</p>
+          <ul>
+            <li>Помогали компаниям трансформировать процессы, автоматизировать закупки и внедрять категории менеджмента.</li>
+            <li>Ускорили процессы принятия решений и повысили прозрачность бизнес-процессов.</li>
+          </ul>
+          <p>3. Антикризисное управление</p>
+            <ul>
+              <li> Наша команда управляла проектами в сложных экономических условиях, восстанавливая контроль над финансовыми потоками и повышая операционную эффективность.</li>
+              <li>Выстроили устойчивые бизнес-модели для компаний, столкнувшихся с кризисом.</li>
+            </ul>
+            <p>4. Юридическая и контрактная поддержка</p>
+            <ul>
+              <li>Эксперты компании анализируют и составляют контракты, минимизируя риски для клиента.</li>
+              <li>Опыт работы в разрешении спорных вопросов и защите интересов клиентов в рамках контрактов с государственными заказчиками.</li>
+            </ul>
+            <p>Ответственность за масштаб</p>
+          
+          <p>Мы не просто консультируем — мы принимаем участие в реализации:</p>
+          <ul>
+            <li>Контроль над активами: Наши специалисты выстраивали системы управления активами стоимостью в миллионы долларов.</li>
+            <li>Результаты в международных компаниях: Мы внедряли стандарты закупок и продаж, которые соответствуют лучшим мировым практикам.</li>
+            <li>Руководство крупными проектами: Включая управление цепочками поставок для международных предприятий</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   <section class="cta">
     <div class="cta_1">
