--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
     <title>Globbid Cunsulting</title>
+
+    <meta id="meta-ru" name="keywords" content="Госзакупки оптимизация, Услуги B2G, Участие в тендерах, Консалтинговые услуги для госзакупок, Анализ тендерных предложений, Оптимизация закупочных процедур">
+    
   </head>
   <body>
     <header class="header">
@@ -47,6 +50,7 @@
         <img src="./img/png/hero.png" alt="Hero Background" class="hero-img" />
       </div>
       <div class="hero-text">Делая сложное простым, мы создаем ваш успех</div>
+     <p class="button"> <button>обратитсья </button> </p>
     </section>
 
     <section class="flex">
@@ -112,7 +116,7 @@
         </div>
       </div>
       <div class="section_container">
-        <img src="./img/png/hero.png" alt="" class="section_img" />
+        <img src="./img/png/home_hero.png" alt="" class="section_img" />
       </div>
     </section>
     <section class="flex">
